--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@capacitor/ios": "^7.0.1",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
+    "buffer": "^6.0.3",
+    "form-data": "^4.0.1",
     "next": "^14.2.23",
     "react": "^18",
     "react-dom": "^18",
