--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@capacitor/cli": "^7.0.1",
     "@capacitor/core": "^7.0.1",
     "@capacitor/ios": "^7.0.1",
+    "@huggingface/transformers": "^3.3.3",
     "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.9",
     "buffer": "^6.0.3",
