--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "formidable": "^3.5.2",
     "next": "^14.2.23",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
