--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "@commitlint/config-conventional": "^19.8.0",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/exec": "^7.0.3",
-    "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.1",
     "@semantic-release/npm": "^12.0.1",
     "@testing-library/dom": "^10.4.0",
@@ -63,6 +62,7 @@
     "prettier-plugin-tailwindcss": "^0.6.11",
     "semantic-release": "^24.2.3",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "whatwg-fetch": "^3.6.20"
   }
 }
